# RDT

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml
docs/: plan.md
docs/en/: mcp-server.md  scripting.md
docs/ru/: mcp-server.md  scripting.md
docs/skills/: rdt-skill.md
rdt/: __init__.py  artifacts.py  cli.py  core.py  doctor.py  env_manager.py  i18n.py  mcp_server.py  port_utils.py  smart_mapping.py  wizard.py  yaml_manager.py
rdt/locales/: en.json  ru.json
rdt/presets/: catalog.py
rdt/strategies/: admin_tool.py  base.py  database.py  factory.py  monitoring.py  traefik.py  web_server.py
rdt/templates/artifacts/apache/: httpd-static.conf.j2  vhost-php.conf.j2
rdt/templates/artifacts/filebeat/: filebeat-es.yml.j2  filebeat-logstash.yml.j2  filebeat-stdout.yml.j2
rdt/templates/artifacts/logstash/: logstash-beats-es.conf.j2  logstash-beats-stdout.conf.j2  logstash.yml.j2
rdt/templates/artifacts/nginx/: nginx-proxy.conf.j2  nginx-spa.conf.j2  nginx-static.conf.j2
rdt/templates/artifacts/prometheus/: prometheus.yml.j2
rdt/templates/artifacts/traefik/: traefik.yml.j2
templates/: admin_tool.yml.j2  database.yml.j2  monitoring.yml.j2
tests/: test_artifact_pipeline.py
