[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rdt-rambo"
version = "2.0.0"
description = "Rambo Docker Tools — CLI for docker-compose generation"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "Skr0ls", email = "dskrl@outlook.com" },
]
keywords = ["docker", "docker-compose", "cli", "devops", "generator"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "typer[all]>=0.12",
    "ruamel.yaml>=0.18",
    "questionary>=2.0",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
    "port-for>=0.7",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/Skr0ls/RDT"
Repository = "https://github.com/Skr0ls/RDT"
"Bug Tracker" = "https://github.com/Skr0ls/RDT/issues"

[project.scripts]
rdt = "rdt.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["rdt*"]

[tool.setuptools.package-data]
rdt = ["locales/*.json", "presets/*.json", "templates/**/*"]

