[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "locker-room-tolls-rdt"
version = "2.1.1"
description = "Rambo Docker Tools — CLI for docker-compose generation"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "Locker-Room-Tools", email = "dskrl@outlook.com" },
]
keywords = ["docker", "docker-compose", "cli", "devops", "generator"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "typer[all]>=0.12",
    "ruamel.yaml>=0.18",
    "questionary>=2.0",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
    "port-for>=0.7",
    "rich>=13.0",
]

[project.optional-dependencies]
mcp = [
    "mcp[cli]>=1.0",
]

[project.urls]
Homepage = "https://github.com/Locker-Room-Tools/RDT"
Repository = "https://github.com/Locker-Room-Tools/RDT"
"Bug Tracker" = "https://github.com/Locker-Room-Tools/RDT/issues"

[project.scripts]
rdt = "rdt.cli:app"
rdt-mcp = "rdt.mcp_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["rdt*"]

[tool.setuptools.package-data]
rdt = ["locales/*.json", "presets/*.json", "templates/**/*"]

